--- a/index.html
+++ b/index.html
@@ -5,4 +5,10 @@
   <body>
     <h1> This is my first Github page</h1>
   </body>
+  
+  <style>
+    background-color:green;
+    color:#fff;
+    text-align:center;
+  </style>
 </html>
